--- a/app/mainwindow.ui
+++ b/app/mainwindow.ui
@@ -40,14 +40,7 @@
      </layout>
     </item>
     <item>
-     <widget class="QPlainTextEdit" name="plainLog">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-     </widget>
+     <widget class="QTreeView" name="ctTree"/>
     </item>
    </layout>
   </widget>
