--- a/app/octave/octavedlg.ui
+++ b/app/octave/octavedlg.ui
@@ -120,7 +120,14 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="editLambdas"/>
+         <widget class="QLineEdit" name="editLambdas">
+          <property name="text">
+           <string>0.1 0.2 0.3 0.4 0.45 0.5 0.55 0.7 0.9 1.0 2.0</string>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -197,7 +204,7 @@
            </size>
           </property>
           <property name="text">
-           <string>LambdVal</string>
+           <string>N/A</string>
           </property>
          </widget>
         </item>
@@ -215,7 +222,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="lbError">
+         <widget class="QLabel" name="lbCost">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -229,7 +236,7 @@
            </size>
           </property>
           <property name="text">
-           <string>CostVal</string>
+           <string>N/A</string>
           </property>
          </widget>
         </item>
@@ -241,7 +248,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_7">
+         <widget class="QLabel" name="lbIter">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -255,7 +262,21 @@
            </size>
           </property>
           <property name="text">
-           <string>IterValue</string>
+           <string>N/A</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>Min cost:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="lbMinCost">
+          <property name="text">
+           <string>N/A</string>
           </property>
          </widget>
         </item>
@@ -277,7 +298,7 @@
       <item>
        <widget class="QProgressBar" name="progressBar">
         <property name="value">
-         <number>24</number>
+         <number>0</number>
         </property>
        </widget>
       </item>
