Add parsing genres, add unit test for genre and when genre fan is not exists

--- a/app/tests/res.qrc
+++ b/app/tests/res.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/data">
         <file alias="work">work.json</file>
+        <file alias="work_no_genre">work_no_genre.json</file>
     </qresource>
 </RCC>
