Add recommendations initial model and widget

--- a/app/mainwindow.ui
+++ b/app/mainwindow.ui
@@ -20,7 +20,13 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QTreeView" name="ctTree"/>
+     <widget class="QSplitter" name="splitter">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <widget class="QTreeView" name="ctTree"/>
+      <widget class="QTreeView" name="rTree"/>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -30,7 +36,7 @@
      <x>0</x>
      <y>0</y>
      <width>964</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
