--- a/app/mainwindow.ui
+++ b/app/mainwindow.ui
@@ -44,14 +44,7 @@
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Percent of similarity:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="lbMin">
-        <property name="text">
-         <string>0 %</string>
+         <string>Minimal percent of similarity:</string>
         </property>
        </widget>
       </item>
@@ -69,9 +62,23 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="lbMax">
+       <widget class="QLabel" name="lbSim">
         <property name="text">
-         <string>100 %</string>
+         <string>0 %</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Records active:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lbRecords">
+        <property name="text">
+         <string>0</string>
         </property>
        </widget>
       </item>
