Refactor octave dialog, fix file open dialog behavior

--- a/app/octave/octavedlg.ui
+++ b/app/octave/octavedlg.ui
@@ -352,6 +352,13 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="btnOk">
+       <property name="text">
+        <string>Ok</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="btnStart">
        <property name="text">
         <string>Start</string>
@@ -359,14 +366,10 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btnStop">
-       <property name="text">
-        <string>Stop</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QPushButton" name="btnCancel">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Cancel</string>
        </property>
