--- a/app/mainwindow.ui
+++ b/app/mainwindow.ui
@@ -90,7 +90,14 @@
        <enum>Qt::Vertical</enum>
       </property>
       <widget class="QTreeView" name="ctTree"/>
-      <widget class="QTreeView" name="rTree"/>
+      <widget class="QTreeView" name="rTree">
+       <property name="horizontalScrollBarPolicy">
+        <enum>Qt::ScrollBarAsNeeded</enum>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
      </widget>
     </item>
    </layout>
