--- a/app/statusbar/status_bar.ui
+++ b/app/statusbar/status_bar.ui
@@ -200,7 +200,7 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="QLabel" name="labelSpeedImg">
+       <widget class="QLabel" name="labelReqImg">
         <property name="minimumSize">
          <size>
           <width>16</width>
@@ -216,10 +216,13 @@
         <property name="text">
          <string/>
         </property>
+        <property name="pixmap">
+         <pixmap resource="../icons.qrc">:/icons/network.ico</pixmap>
+        </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="labelSpeed">
+       <widget class="QLabel" name="labelReq">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -228,6 +231,13 @@
         </property>
         <property name="text">
          <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelReqErr">
+        <property name="text">
+         <string>TextLabel</string>
         </property>
        </widget>
       </item>
@@ -353,6 +363,8 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="../icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
