--- a/app/mainwindow.ui
+++ b/app/mainwindow.ui
@@ -120,7 +120,7 @@
      <x>0</x>
      <y>0</y>
      <width>995</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
@@ -208,6 +208,15 @@
    </property>
    <property name="toolTip">
     <string>Save data in libRec format</string>
+   </property>
+  </action>
+  <action name="actionKM">
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/icons/files_text.ico</normaloff>:/icons/files_text.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Save K-means data</string>
    </property>
   </action>
  </widget>
